# conda-meta-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASING.md  action.yml  pyproject.toml  renovate.json  server-info.json
.github/workflows/: lint.yaml  test-action.yml  tests.yml  update-lockfiles.yml
conda_meta_mcp/: __init__.py  cli.py  mcp_json.py  parent_watcher.py  server.py
conda_meta_mcp/tools/: __init__.py  _channels.py  cache_maintenance.py  cache_utils.py  cli_help.py  conda_cli.py  discovery.py  file_path_search.py  import_mapping.py  info.py  pkg_insights.py  pkg_search.py  pypi_to_conda.py  registry.py  repoquery.py  type_definitions.py
recipe/: meta.yaml
tests/: conftest.py  test_cli.py  test_info.py  test_parent_watcher.py  test_pkg_insights.py  test_pkg_search.py  test_server.py
tests/tools/: test_cache_utils.py  test_cli_help.py  test_conda_cli.py  test_file_path_search.py  test_import_mapping.py  test_info.py  test_optimizations.py  test_pkg_insights.py  test_pkg_search.py  test_pypi_to_conda.py  test_repoquery.py
